# a_vi

./: .env.example  .gitignore  ENHANCEMENTS_SUMMARY.md  FIXES_APPLIED.md  GITHUB_OAUTH_SETUP.md  PHASE5_CODE_REVIEW.md  SUPABASE_SETUP.md  package-lock.json  package.json
api/: .env.example  package.json
api/src/: index.ts
api/src/middleware/: requireAuth.ts
api/src/routes/: prompt.ts
app/: index.html  package.json  supabase_schema.sql  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/AssetLibrary/: AssetLibrary.tsx
app/src/components/AssetUpload/: AssetUpload.tsx
app/src/components/AuthModal/: AuthModal.tsx
app/src/components/PlayerPanel/: GhostPreviewBar.tsx  PlayerPanel.tsx  PreviewErrorBoundary.tsx
app/src/components/PromptModal/: PromptModal.tsx
app/src/components/Spinner/: Spinner.tsx
app/src/components/Timeline/: Clip.tsx  Playhead.tsx  SelectionOverlay.tsx  Timeline.tsx  TimelineRuler.tsx  TimelineTrack.tsx  constants.ts
app/src/components/ToastContainer/: ToastContainer.tsx
app/src/components/UploadFirstCanvas/: UploadFirstCanvas.tsx
app/src/components/WasmPanel/: WasmPanel.tsx
app/src/hooks/: useCommandK.ts  useGhostPreviewKeys.ts  useOnlineStatus.ts  useProjectManager.ts  useTimelineShortcuts.ts  useWasm.ts
app/src/lib/: assetService.ts  authContext.tsx  clipValidation.ts  editorUtils.ts  mediaStorage.ts  projectService.ts  supabaseClient.ts  toastStore.ts  videoExportService.ts
app/src/remotion/: Root.tsx
app/src/store/: useEditorStore.ts
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
(+2 files in other folders)
